[gd_scene load_steps=11 format=3 uid="uid://dnt3hngmwfph7"]

[ext_resource type="Theme" uid="uid://c3rh6o4o4o4bu" path="res://assets/fonts/themes/menu_button.tres" id="1_161d8"]
[ext_resource type="Script" path="res://scripts/options.gd" id="1_q3kwl"]
[ext_resource type="StyleBox" uid="uid://cysqklup1v1ve" path="res://assets/fonts/styleboxes/button_pressed.tres" id="2_tlvrc"]
[ext_resource type="StyleBox" uid="uid://df2xcacdd4svj" path="res://assets/fonts/styleboxes/button_normal.tres" id="3_ukji8"]
[ext_resource type="Theme" uid="uid://blo888x60cime" path="res://assets/fonts/themes/terminal_theme.tres" id="6_dmrmn"]

[sub_resource type="Gradient" id="Gradient_747yo"]
offsets = PackedFloat32Array(0, 0.593909, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.215278, 0.215278, 0.215278, 1, 0.423651, 0.423651, 0.423651, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cyi1i"]
frequency = 0.0005

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6i6nv"]
color_ramp = SubResource("Gradient_747yo")
noise = SubResource("FastNoiseLite_cyi1i")

[sub_resource type="InputEventKey" id="InputEventKey_kp46j"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_uobcg"]
events = [SubResource("InputEventKey_kp46j")]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3kwl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -31.0
offset_right = 45.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_6i6nv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -198.0
offset_right = 229.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="BackToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_161d8")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_styles/hover_pressed = ExtResource("2_tlvrc")
theme_override_styles/hover = ExtResource("3_ukji8")
theme_override_styles/pressed = ExtResource("2_tlvrc")
theme_override_styles/normal = ExtResource("3_ukji8")
shortcut = SubResource("Shortcut_uobcg")
text = "Back to Menu"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("6_dmrmn")
theme_override_font_sizes/font_size = 30
text = "Player Max Health   "

[node name="Player Max Health Modifyer" type="SpinBox" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
min_value = 5.0
step = 5.0
value = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_dmrmn")
theme_override_font_sizes/font_size = 30
text = "Enemy Damage Modifyer    "

[node name="EnemyDamageModifyer" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("6_dmrmn")
theme_override_font_sizes/font_size = 30
text = "Enemy Cooldown Modifyer    "

[node name="EnemySpeedModifyer" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme = ExtResource("6_dmrmn")
theme_override_font_sizes/font_size = 30
text = "Enemy Health Modifyer    "

[node name="EnemyHealthModifyer" type="SpinBox" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
max_value = 10.0
step = 0.1

[connection signal="pressed" from="VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/Player Max Health Modifyer" to="." method="_on_player_max_health_modifyer_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/EnemyDamageModifyer" to="." method="_on_enemy_damage_modifyer_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/EnemySpeedModifyer" to="." method="_on_enemy_speed_modifyer_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/EnemyHealthModifyer" to="." method="_on_enemy_health_modifyer_value_changed"]
